--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Laboratorio de Silvicultura y Ecología de la Vegetación</title>
-  <meta name="description" content="Laboratorio universitario dedicado a la silvicultura y ecología de la vegetación." />
+  <meta name="description" content="Laboratorio dedicado a la silvicultura y ecología de la vegetación." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -38,8 +38,8 @@
     <div>
       <div data-lang="es" class="active" style="font-weight:700">Laboratorio de Silvicultura y Ecología de la Vegetación</div>
       <div data-lang="en" style="font-weight:700">Laboratory of Silviculture and Vegetation Ecology</div>
-      <div class="muted" data-lang="es">Universidad — Departamento / Facultad</div>
-      <div class="muted" data-lang="en">University — Department / Faculty</div>
+      <div class="muted" data-lang="es">Universidad de Chile — Departamento de Silvicultura y Conservación de la Naturaleza / Facultad de Ciencias Forestales y conservación de la naturaleza</div>
+      <div class="muted" data-lang="en">University — Department of Silviculture and Nature Conservation/ Faculty of Forestry Sciences and Nature Conservation</div>
     </div>
   </div>
   <div class="lang-switch">
