--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div>
       <div data-lang="es" class="active" style="font-weight:800">Laboratorio de Ecología de la Vegetación</div>
       <div data-lang="en" style="font-weight:800">Vegetation Ecology Laboratory</div>
-      <div class="muted" data-lang="es">Universidad de Chile · Departamento de Silvicultura · Facultad de Ciencias Forestales</div>
-      <div class="muted" data-lang="en">University of Chile · Department of Silviculture · Faculty of Forest Sciences</div>
+      <div class="muted" data-lang="es">Universidad de Chile · Departamento de Silvicultura y Conservación de la Naturaleza · Facultad de Ciencias Forestales y Conservación de la Naturaleza</div>
+      <div class="muted" data-lang="en">University of Chile · Department of Silviculture and Nature Conservation· Faculty of Forest Sciences and Nature Conservation</div>
     </div>
   </div>
   <div class="lang-switch">
@@ -57,7 +57,7 @@
 </header>
 
 <section class="hero card">
-  <h1 data-lang="es" class="active">Investigación y docencia en ecología y silvicultura forestal</h1>
+  <h1 data-lang="es" class="active">Investigación y estudio en ecología y silvicultura forestal</h1>
   <h1 data-lang="en">Research and teaching in forest ecology and silviculture</h1>
   <p class="muted" data-lang="es">El laboratorio desarrolla investigación científica y aplicada sobre la estructura, dinámica y manejo de la vegetación, integrando trabajo de campo, análisis cuantitativo y herramientas SIG.</p>
   <p class="muted" data-lang="en">The laboratory conducts scientific and applied research on vegetation structure, dynamics and management, integrating fieldwork, quantitative analysis and GIS tools.</p>
@@ -71,6 +71,7 @@
   <h2 data-lang="en">Research areas</h2>
   <ul class="muted" data-lang="es" class="active">
     <li>Ecología forestal y silvicultura</li>
+    <li>Dinámica de ecosistemas y sucesión ecológica</li>
     <li>Cartografía y clasificación de la vegetación</li>
     <li>Métodos de muestreo de flora y vegetación</li>
     <li>Sistemas de Información Geográfica (SIG)</li>
@@ -79,6 +80,7 @@
   </ul>
   <ul class="muted" data-lang="en">
     <li>Forest ecology and silviculture</li>
+    <li>Ecosystem dynamics and ecological succession</li>
     <li>Vegetation mapping and classification</li>
     <li>Flora and vegetation sampling methods</li>
     <li>Geographic Information Systems (GIS)</li>
@@ -90,15 +92,42 @@
 <section class="card" style="margin-top:18px">
   <h2 data-lang="es" class="active">Dirección del laboratorio</h2>
   <h2 data-lang="en">Laboratory heads</h2>
+
   <ul class="muted" data-lang="es" class="active">
-    <li>Dr. Gustavo Cruz</li>
-    <li>Dr. Álvaro Promis</li>
+    <li>
+      Dr. Gustavo Cruz<br>
+      <span class="muted">
+        Ingeniero Forestal, Universidad de Chile ·
+        Dr. Rerum Naturalium, Universidad de Freiburg
+      </span>
+    </li>
+    <li>
+      Dr. Álvaro Promis<br>
+      <span class="muted">
+        Ingeniero Forestal, Universidad de Chile ·
+        Dr. Rerum Naturalium, Universidad de Freiburg
+      </span>
+    </li>
   </ul>
+
   <ul class="muted" data-lang="en">
-    <li>Dr. Gustavo Cruz</li>
-    <li>Dr. Álvaro Promis</li>
+    <li>
+      Dr. Gustavo Cruz<br>
+      <span class="muted">
+        Forest Engineer, University of Chile ·
+        Dr. rer. nat., University of Freiburg
+      </span>
+    </li>
+    <li>
+      Dr. Álvaro Promis<br>
+      <span class="muted">
+        Forest Engineer, University of Chile ·
+        Dr. rer. nat., University of Freiburg
+      </span>
+    </li>
   </ul>
 </section>
+
 
 </main>
 
@@ -107,42 +136,115 @@
 <section class="card">
   <h3 data-lang="es" class="active">Investigadores asociados</h3>
   <h3 data-lang="en">Associated researchers</h3>
+
   <ul class="muted" data-lang="es" class="active">
-    <li>Cecilia Briceño</li>
-    <li>Nodora L. Moyano</li>
-    <li>Patricio Tapia</li>
+    <li>
+      Cecilia Briceño<br>
+      <span class="muted">Ingeniera Forestal, Universidad de Chile</span>
+    </li>
+    <li>
+      Nodora L. Moyano<br>
+      <span class="muted">Ingeniera Forestal, Universidad de Chile</span>
+    </li>
+    <li>
+      Patricio Tapia<br>
+      <span class="muted">Ingeniero Forestal, Universidad de Chile</span>
+    </li>
   </ul>
+
   <ul class="muted" data-lang="en">
-    <li>Cecilia Briceño</li>
-    <li>Nodora L. Moyano</li>
-    <li>Patricio Tapia</li>
+    <li>
+      Cecilia Briceño<br>
+      <span class="muted">Forest Engineer, University of Chile</span>
+    </li>
+    <li>
+      Nodora L. Moyano<br>
+      <span class="muted">Forest Engineer, University of Chile</span>
+    </li>
+    <li>
+      Patricio Tapia<br>
+      <span class="muted">Forest Engineer, University of Chile</span>
+    </li>
   </ul>
 </section>
+
 
 <section class="card" style="margin-top:18px">
   <h3 data-lang="es" class="active">Memorantes actuales</h3>
   <h3 data-lang="en">Current undergraduate students</h3>
+
   <ul class="muted" data-lang="es" class="active">
-    <li>Martín Inostroza</li>
-    <li>Daisy Espinoza</li>
-    <li>Isidora Pérez</li>
-    <li>Rodrigo Baeza</li>
-    <li>Valentina Pérez</li>
-    <li>Pedro Lara</li>
-    <li>Camila Millaguir</li>
-    <li>Josefa Espinoza</li>
+    <li>
+      Martín Inostroza<br>
+      <span class="muted thesis">Memoria: DISTRIBUCIÓN Y CARACTERÍSTICAS ESTRUCTURALES DE LAS AGRUPACIONES DE Austrocedrus chilensis (D. Don.) Pic. Serm. et Biz. COMO BASE PARA SU CONSERVACIÓN EN LA COMUNA DE SAN JOSÉ DE MAIPO, REGIÓN METROPOLITANA</span>
+    </li>
+    <li>
+      Daisy Espinoza<br>
+      <span class="muted thesis">Memoria: ANALISIS DE LA ESTRUCTURA Y COMPOSICION DEL BOSQUE Y MATORRAL ESCLEROFILO Y SU INFLUENCIA EN LA PRODUCCION MELIFERA EN APIARIOS DE LA COMUNA DE PIRQUE, CHILE </span>
+    </li>
+    <li>
+      Isidora Pérez<br>
+      <span class="muted thesis">Memoria: EVALUACIÓN Y ACTUALIZACIÓN DE ENSAYOS SILVICULTURALES EN BOSQUES DE LENGA Nothofagus pumilio (Poepp. et Endl.) Krasser EN TIERRA DEL FUEGO, REGIÓN DE MAGALLANES Y LA ANTÁRTICA CHILENA</span>
+    </li>
+    <li>
+      Rodrigo Baeza<br>
+      <span class="muted thesis">Memoria: TÍTULO DE LA MEMORIA</span>
+    </li>
+    <li>
+      Valentina Pérez<br>
+      <span class="muted thesis">Memoria: EVALUACIÓN DEL CRECIMIENTO DE UN BOSQUE MIXTO DE LENGA (Nothofagus pumilio (Poepp. et Endl.) Krasser) Y COIHUE DE MAGALLANES (Nothofagus betuloides (Mirb.) Oerst.) BAJO DOS SISTEMAS SILVÍCOLAS EN LA REGIÓN DE MAGALLANES Y LA ANTÁRTICA CHILENA
+</span>
+    </li>
+    <li>
+      Pedro Lara<br>
+      <span class="muted thesis">Memoria: TÍTULO DE LA MEMORIA</span>
+    </li>
+    <li>
+      Camila Millaguir<br>
+      <span class="muted thesis">Memoria: CARACTERIZACIÓN Y EVALUACIÓN DE LA ALTERACIÓN DE HABITAT EN UNA POBLACIÓN DE Austrocedrus chilensis (D. Don) Pic. Serm et Bizzarri EN LA COMUNA DE CODEGUA, REGIÓN DEL LIBERTADOR BERNARDO O´HIGGINS, CHILE</span>
+    </li>
+    <li>
+      Josefa Espinoza<br>
+      <span class="muted thesis">Memoria: TÍTULO DE LA MEMORIA</span>
+    </li>
   </ul>
+
   <ul class="muted" data-lang="en">
-    <li>Martín Inostroza</li>
-    <li>Daisy Espinoza</li>
-    <li>Isidora Pérez</li>
-    <li>Rodrigo Baeza</li>
-    <li>Valentina Pérez</li>
-    <li>Pedro Lara</li>
-    <li>Camila Millaguir</li>
-    <li>Josefa Espinoza</li>
+    <li>
+      Martín Inostroza<br>
+      <span class="muted thesis">Thesis: THESIS TITLE</span>
+    </li>
+    <li>
+      Daisy Espinoza<br>
+      <span class="muted thesis">Thesis: THESIS TITLE</span>
+    </li>
+    <li>
+      Isidora Pérez<br>
+      <span class="muted thesis">Thesis: THESIS TITLE</span>
+    </li>
+    <li>
+      Rodrigo Baeza<br>
+      <span class="muted thesis">Thesis: THESIS TITLE</span>
+    </li>
+    <li>
+      Valentina Pérez<br>
+      <span class="muted thesis">Thesis: THESIS TITLE</span>
+    </li>
+    <li>
+      Pedro Lara<br>
+      <span class="muted thesis">Thesis: THESIS TITLE</span>
+    </li>
+    <li>
+      Camila Millaguir<br>
+      <span class="muted thesis">Thesis: THESIS TITLE</span>
+    </li>
+    <li>
+      Josefa Espinoza<br>
+      <span class="muted thesis">Thesis: THESIS TITLE</span>
+    </li>
   </ul>
 </section>
+
 
 <section class="card" style="margin-top:18px">
   <h3 data-lang="es" class="active">Memorantes anteriores</h3>
@@ -150,7 +252,6 @@
   <ul class="muted" data-lang="es" class="active">
     <li>Esire Encina</li>
     <li>Matías Flores</li>
-    <li>Javiera Fuenzalida</li>
     <li>Martín Vega</li>
     <li>Emilia Loyola</li>
   </ul>
@@ -173,15 +274,19 @@
 
 <script>
 function setLang(lang){
-  document.querySelectorAll('[data-lang]').forEach(el=>{
-    el.classList.toggle('active', el.getAttribute('data-lang')===lang);
+  document.querySelectorAll('[data-lang]').forEach(el => {
+    el.classList.toggle('active', el.getAttribute('data-lang') === lang);
   });
-  document.getElementById('btn-es').classList.toggle('active', lang==='es');
-  document.getElementById('btn-en').classList.toggle('active', lang==='en');
+  document.getElementById('btn-es').classList.toggle('active', lang === 'es');
+  document.getElementById('btn-en').classList.toggle('active', lang === 'en');
   document.documentElement.lang = lang;
 }
 
-document.getElementById('year').textContent = new Date().getFullYear();
+// Inicializar idioma por defecto al cargar la página
+window.addEventListener('DOMContentLoaded', () => {
+  setLang('es');
+  document.getElementById('year').textContent = new Date().getFullYear();
+});
 </script>
 </body>
 </html>
