--- a/index.html
+++ b/index.html
@@ -99,13 +99,20 @@
       <span class="muted">
         Ingeniero Forestal, Universidad de Chile ·
         Dr. Rerum Naturalium, Universidad de Freiburg
+      </span><br>
+      <span class="muted expertise">
+        Áreas de expertise: Silvicultura · Cartografía de la egetación · Ecología Forestal
       </span>
     </li>
+
     <li>
       Dr. Álvaro Promis<br>
       <span class="muted">
         Ingeniero Forestal, Universidad de Chile ·
         Dr. Rerum Naturalium, Universidad de Freiburg
+      </span><br>
+      <span class="muted expertise">
+        Áreas de expertise: Ecología Forestal · Dinámica de ecosistemas · Silvicultura
       </span>
     </li>
   </ul>
@@ -116,17 +123,25 @@
       <span class="muted">
         Forest Engineer, University of Chile ·
         Dr. rer. nat., University of Freiburg
+      </span><br>
+      <span class="muted expertise">
+        Areas of expertise: Silviculture · Vegetation mapping · Forest Ecology
       </span>
     </li>
+
     <li>
       Dr. Álvaro Promis<br>
       <span class="muted">
         Forest Engineer, University of Chile ·
         Dr. rer. nat., University of Freiburg
+      </span><br>
+      <span class="muted expertise">
+        Areas of expertise: Forest Ecology · Ecosistems dynamics · Silviculture
       </span>
     </li>
   </ul>
 </section>
+
 
 
 </main>
@@ -140,33 +155,56 @@
   <ul class="muted" data-lang="es" class="active">
     <li>
       Cecilia Briceño<br>
-      <span class="muted">Ingeniera Forestal, Universidad de Chile</span>
+      <span class="muted">Ingeniera Forestal, Universidad de Chile</span><br>
+      <span class="muted expertise">
+        Áreas de expertise: Legislación Ambiental · Manejo de ecosistemas · Ecología Forestal 
+      </span>
     </li>
+
     <li>
       Nodora L. Moyano<br>
-      <span class="muted">Ingeniera Forestal, Universidad de Chile</span>
+      <span class="muted">Ingeniera Forestal, Universidad de Chile</span><br>
+      <span class="muted expertise">
+        Áreas de expertise: Silvicultura · Botánica · Cartografía de la vegetación
+      </span>
     </li>
+
     <li>
       Patricio Tapia<br>
-      <span class="muted">Ingeniero Forestal, Universidad de Chile</span>
+      <span class="muted">Ingeniero Forestal, Universidad de Chile</span><br>
+      <span class="muted expertise">
+        Áreas de expertise: Modelación · Análisis de datos · Cartografía de la vegetación
+      </span>
     </li>
   </ul>
 
   <ul class="muted" data-lang="en">
     <li>
       Cecilia Briceño<br>
-      <span class="muted">Forest Engineer, University of Chile</span>
+      <span class="muted">Forest Engineer, University of Chile</span><br>
+      <span class="muted expertise">
+        Areas of expertise: AREA 1 · AREA 2
+      </span>
     </li>
+
     <li>
       Nodora L. Moyano<br>
-      <span class="muted">Forest Engineer, University of Chile</span>
+      <span class="muted">Forest Engineer, University of Chile</span><br>
+      <span class="muted expertise">
+        Areas of expertise: AREA 1 · AREA 2
+      </span>
     </li>
+
     <li>
       Patricio Tapia<br>
-      <span class="muted">Forest Engineer, University of Chile</span>
+      <span class="muted">Forest Engineer, University of Chile</span><br>
+      <span class="muted expertise">
+        Areas of expertise: AREA 1 · AREA 2
+      </span>
     </li>
   </ul>
 </section>
+
 
 
 <section class="card" style="margin-top:18px">
