--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Laboratorio de Ecología de la Vegetación | Universidad de Chile</title>
-  <meta name="description" content="Laboratorio de Ecología de la Vegetación, Universidad de Chile. Research in forest ecology, silviculture, vegetation cartography and GIS." />
+  <title>Laboratorio de Silvicultura y Ecología de la Vegetación | Universidad de Chile</title>
+  <meta name="description" content="Laboratorio de Silvicultura y Ecología de la Vegetación, Universidad de Chile. Research in forest ecology, silviculture, vegetation cartography and GIS." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -44,8 +44,8 @@
   <div class="brand">
     <div class="logo">LEV</div>
     <div>
-      <div data-lang="es" class="active" style="font-weight:800">Laboratorio de Ecología de la Vegetación</div>
-      <div data-lang="en" style="font-weight:800">Vegetation Ecology Laboratory</div>
+      <div data-lang="es" class="active" style="font-weight:800">Laboratorio de Silvicultura y Ecología de la Vegetación</div>
+      <div data-lang="en" style="font-weight:800">Silviculture and Vegetation Ecology Laboratory</div>
       <div class="muted" data-lang="es">Universidad de Chile · Departamento de Silvicultura y Conservación de la Naturaleza · Facultad de Ciencias Forestales y Conservación de la Naturaleza</div>
       <div class="muted" data-lang="en">University of Chile · Department of Silviculture and Nature Conservation· Faculty of Forest Sciences and Nature Conservation</div>
     </div>
