--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
     }
     *{box-sizing:border-box}
     html,body{height:100%}
-    body{margin:0;font-family: "Libre Baskerville", "Baskerville", "Baskerville Old Face", "Garamond", "Times New Roman", serif;background:var(--bg);color:#0f172a;line-height:1.6;-webkit-font-smoothing:antialiased}
-    .container{max-width:var(--maxw);margin:0 auto;padding:36px}
+    body{
+  margin:0;
+  font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont,
+               "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  background:var(--bg);
+  color:#0f172a;
+  line-height:1.6;
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}   .container{max-width:var(--maxw);margin:0 auto;padding:36px}
     header{display:flex;justify-content:space-between;align-items:center;gap:20px}
     .brand{display:flex;gap:14px;align-items:center}
     .logo{width:64px;height:64px;border-radius:12px;background:linear-gradient(135deg,var(--accent),#0f4d3f);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:800;font-size:18px}
