--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
       <section class="card">
         <h3 data-lang="es" class="active">Contacto</h3>
         <h3 data-lang="en">Contact</h3>
-        <p class="muted" data-lang="es" class="active">Coordinador: Dr. Gustavo Cruz<br>Correo: <a href="mailto:lab-silvicultura@uchile.cl">lab-silvicultura@uchile.cl</a></p>
-        <p class="muted" data-lang="en">Coordinator: Dr. Gustavo Cruz<br>Email: <a href="mailto:lab-silvicultura@uchile.cl">lab-silvicultura@uchile.cl</a></p>
+        <p class="muted" data-lang="es" class="active">Coordinador: Dr. Álvaro Promis<br>Correo: <a href="mailto:lab-silvicultura@uchile.cl">lab-silvicultura@uchile.cl</a></p>
+        <p class="muted" data-lang="en">Coordinator: Dr. Álvaro Promis<br>Email: <a href="mailto:lab-silvicultura@uchile.cl">lab-silvicultura@uchile.cl</a></p>
       </section>
 
       <section class="card" style="margin-top:18px">
@@ -320,11 +320,11 @@
   <p class="muted" data-lang="en">Template to add courses taught and internships. Replace FIELDS IN UPPERCASE.</p>
 
   <div class="card" style="margin-top:12px">
-    <h3 data-lang="es" class="active">Curso: NOMBRE DEL CURSO</h3>
-    <h3 data-lang="en">Course: COURSE TITLE</h3>
+    <h3 data-lang="es" class="active">Curso: Dinámica de bosques</h3>
+    <h3 data-lang="en">Course: Forests dynamics</h3>
     <p class="muted"><strong data-lang="es" class="active">Descripción:</strong><strong data-lang="en">Description:</strong> BREVE DESCRIPCIÓN DEL CURSO / BRIEF DESCRIPTION</p>
     <p class="muted"><strong>Duración / Duration:</strong> NÚMERO DE HORAS / HOURS</p>
-    <p class="muted"><strong>Dirigido a / Target students:</strong> CARRERAS O NIVELES</p>
+    <p class="muted"><strong>Dirigido a / Target students:</strong> Ing. Forestal / Forestry Engineer</p>
   </div>
 
   <section style="margin-top:14px">
