--- a/index.html
+++ b/index.html
@@ -296,16 +296,28 @@
         <h3 data-lang="es" class="active">Memorantes anteriores</h3>
         <h3 data-lang="en">Former undergraduate students</h3>
         <ul class="muted" data-lang="es" class="active">
-          <li>Esire Encina</li>
+          <li>Francisca Riquelme</li>
+          <li>Esiré Encina</li>
+          <li>Isabel Juricic</li>
+          <li>Nicolás Astudillo</li>
           <li>Matías Flores</li>
+          <li>Matías Wilstermann</li>
+          <li>Javiera Giha</li>
+          <li>Katherine Valdés</li>          
           <li>Martín Vega</li>
-          <li>Emilia Loyola</li>
+          <li>Emilia Fuentes L.</li>
         </ul>
         <ul class="muted" data-lang="en">
-          <li>Esire Encina</li>
+          <li>Francisca Riquelme</li>
+          <li>Esiré Encina</li>
+          <li>Isabel Juricic</li>
+          <li>Nicolás Astudillo</li>
           <li>Matías Flores</li>
+          <li>Matías Wilstermann</li>
+          <li>Javiera Giha</li>
+          <li>Katherine Valdés</li>          
           <li>Martín Vega</li>
-          <li>Emilia Loyola</li>
+          <li>Emilia Fuentes L.</li>
         </ul>
       </section>
     </aside>
