--- a/index.html
+++ b/index.html
@@ -227,6 +227,14 @@
         </div>
 
         <div class="card" style="margin-top:8px">
+          <h4>Martín Inostroza D.</h4>
+          <p class="muted" data-lang="es" class="active">Ingeniero Forestal (E), Universidad de Chile</p>
+          <p class="muted" data-lang="en">Forest Engineer (E), University of Chile</p>
+          <p class="muted expertise" data-lang="es">Áreas de expertise: Cartografía de la vegetación · Modelación </p>
+          <p class="muted expertise" data-lang="en">Areas of expertise: Vegetation mapping · Modelling </p>
+        </div>
+
+        <div class="card" style="margin-top:8px">
           <h4>Patricio Tapia</h4>
           <p class="muted" data-lang="es" class="active">Ingeniero Forestal, Universidad de Chile</p>
           <p class="muted" data-lang="en">Forest Engineer, University of Chile</p>
